--- a/Entregable_II/.classpath
+++ b/Entregable_II/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/Users/W10/Documents/Ingenieria UNLP/TALLER DE LENGUAJES 2/sqlite-jdbc-3.46.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/etche/OneDrive/Documentos/GitHub/sqlite-jdbc-3.46.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
